# bela_synth

./: .clang-format  .gitignore  ARCHUTECTURE.md  CMakeLists.txt  bela_midi_render.cpp  main.cpp
cmake/: bela-toolchain.cmake
include/: messages.hpp
src/: blit.h  controls.h  envelope.h  init.h  main.cpp  message_dispatch.cpp  message_dispatch.h  messages.h  midi_io.cpp  midi_io.h  patch.cpp  patch.h  server.cpp  server.h  utils.h
src/kernel/: adsr.cpp  adsr.h  buffer.cpp  buffer.h  constants.h  osc.cpp  osc.h  rt_main.cpp  rt_main.h  synth.cpp  synth.h
test/: webserver.cpp
